--- a/.htaccess
+++ b/.htaccess
@@ -1,30 +1,16 @@
+
 # BEGIN WordPress
+# The directives (lines) between "BEGIN WordPress" and "END WordPress" are
+# dynamically generated, and should only be modified via WordPress filters.
+# Any changes to the directives between these markers will be overwritten.
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+RewriteBase /wordpress/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteRule . /wordpress/index.php [L]
 </IfModule>
 
-# Prevent Clickjacking
-<IfModule mod_headers.c>
-    Header set X-Frame-Options "DENY"
-</IfModule>
-
-# Disable XML-RPC
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{REQUEST_METHOD} POST
-    RewriteCond %{REQUEST_URI} ^/xmlrpc.php [NC]
-    RewriteRule .* - [F]
-</IfModule>
-
-# Redirect HTTP to HTTPS (uncomment if using HTTPS)
-# <IfModule mod_rewrite.c>
-#     RewriteEngine On
-#     RewriteCond %{HTTPS} off
-#     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-# </IfModule>
 # END WordPress
